# titan-quant

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
book/: LICENSE  README.md  mkdocs.yml  requirements.txt
book/docs/: about.md  index.md
book/docs/appendix/: glossary.md  integration-contract.md  preflight-checklist.md
book/docs/meta/: style-and-redaction.md
book/docs/part1-foundations/: architecture.md  project-layout.md  stack-choices.md  why-systems-fail.md
book/docs/part2-research/: backtest-you-can-trust.md  deflated-sharpe.md  failure-mode-catalogue.md  metric-suite.md  sanctuary-decision-matrix.md  tail-risk-and-ruin.md  typology.md  walk-forward.md
book/docs/part3-data/: data-quality-gate.md  sourcing-storage.md
book/docs/part4-research-to-prod/: broker-realities.md  live-equals-research.md  strategy-class-contract.md
config/: demo_trend.toml  risk.toml
scripts/: audit_codebase_methodology.py  build_data_manifest.py  check_public_redaction.py  download_data_yfinance.py  validate_demo.py
tests/: test_framework_calmar.py  test_framework_cpcv_sanctuary.py  test_framework_dd_throttle.py  test_framework_ic_analysis.py  test_framework_leverage_envelope.py  test_framework_nco.py  test_framework_portfolio_heat.py  test_framework_regime_filter.py  test_framework_returns_hygiene.py  test_framework_synthetic.py
titan/: __init__.py
titan/research/: __init__.py  metrics.py  sharadar_loader.py  vx_term_structure.py
titan/risk/: __init__.py  correlation_dial.py  drift_monitor.py  portfolio_allocator.py  portfolio_risk_manager.py  sizing.py  strategy_equity.py  v38_config_loader.py  v38_envelope.py  verdict_governance.py
titan/strategies/: v38_position_interface.py
titan/utils/: bond_gold_decisions.py  data_manifest.py  global_event_hooks.py  notification.py
(+50 files in other folders)
